# adr-ai-tools-py

./: .gitignore  README.md  main.py  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: adr-request.md  bug_report.md  feature_request.md
docs/adr/: 0001-use-uv-as-dependency-manager.md  0002-adopt-ruff-as-linter-and-formatter.md  0003-implement-comprehensive-ruff-configuration.md  0004-adopt-mypy-for-static-type-checking.md  0005-adopt-pytest-for-testing-framework.md  0006-test-coverage-and-marker-strategy.md  0007-nox-session-organization-strategy.md  0008-python-version-support-strategy.md  0009-adopt-typer-for-cli-framework.md  0010-limit-platform-support-to-unix-like-systems.md  0011-adopt-pexpect-for-e2e-testing.md  0012-adopt-pydantic-for-data-models.md  0013-test-data-strategy-avoid-mocking-data-models.md  0014-use-simple-public-attributes-for-dependencies.md  0015-service-layer-architecture-for-cli-commands.md  0016-dependency-injection-pattern-for-service-composition.md  0017-service-granularity-and-responsibility-separation.md  0018-adopt-pydantic-settings-for-configuration-management.md  0019-strict-configuration-validation.md  0020-configuration-file-persistence-strategy.md  0021-toml-parsing-library-selection-for-configuration-persistence.md  0022-runtime-type-introspection-pattern-for-dynamic-type-conversion.md  0023-file-system-path-conventions-for-application-data.md  0024-constants-extraction-pattern.md  0025-shared-test-fixtures-pattern.md  0026-cli-error-handling-pattern.md  0027-protocol-types-for-test-fixtures.md  0028-structured-test-fixture-organization.md  0029-logging-service-infrastructure-architecture.md  0030-cli-global-options-design-pattern.md  0031-testing-strategy-expansion-for-logging.md  0032-type-safety-over-flexible-logging-api.md  0033-directory-structure-for-three-layer-architecture.md  0034-custom-exception-strategy-for-domain-specific-errors.md  0035-configuration-error-transparency-principle.md
src/adraitools/: __init__.py  cli.py  exceptions.py
src/adraitools/cli/: __init__.py  cli.py
src/adraitools/infrastructure/: __init__.py  configuration_service.py  constants.py  file_system_service.py  toml_file_handler.py  type_converter.py
src/adraitools/models/: configuration.py
src/adraitools/services/: __init__.py  adr_initializer.py  configuration_service.py  doctor_service.py  logging_service.py  (+2 more)
tests/: conftest.py
tests/e2e/: conftest.py  test_cli.py  test_config_command.py  test_doctor_command.py  test_init_command.py  test_init_with_config.py  test_logging_command.py
tests/integration/: test_logging_integration.py
tests/unit/: conftest.py  test_adr_initializer.py  test_cli.py  test_config_cli.py  test_configuration_file_loading.py  test_configuration_service.py  test_doctor_cli.py  test_doctor_service.py  test_file_system_service.py  test_logging_service.py  test_package.py  test_toml_file_handler.py  test_type_converter.py  test_user_interaction_service.py
(+4 files in other folders)
