[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adr-ai-tools-py"
dynamic = ["version"]
description = "A Python toolkit leveraging LLM capabilities to assist with creating, searching, and analyzing Architecture Decision Records (ADRs)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.dynamic]
version = {attr = "adraitools.__version__"}

[project.scripts]
adr-ai-tools = "adraitools.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.ruff]
indent-width = 4
target-version = "py311"
